--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "angular-font-awesome": "^3.1.2",
     "angular2-moment": "^1.7.1",
     "angularfire2": "5.0.0-rc.4",
+    "ap-angular2-fullcalendar": "^1.3.7",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "firebase": "4.8.0",
     "font-awesome": "^4.7.0",
-    "fullcalendar": "^3.8.0",
     "jquery": "^3.3.1",
     "moment": "^2.20.1",
     "primeng": "^5.2.0-rc.1",
