--- a/functions/package.json
+++ b/functions/package.json
@@ -10,8 +10,8 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "firebase-admin": "~5.4.2",
-    "firebase-functions": "^0.7.1"
+    "firebase-admin": "^5.10.0",
+    "firebase-functions": "^0.8.2"
   },
   "devDependencies": {
     "tslint": "^5.8.0",
